--- a/Vote_tracker.html
+++ b/Vote_tracker.html
@@ -1,32 +1,29 @@
 <DOCTYPE html>
-<html>
-<head>
-<title id="title">Bus- Mall</title>
-<link rel="stylesheet" type=text/css href="Vote_tracker.css"
-
-<head>
-<body>
-<h1>Bus Mall</h1>
-<div>
-</div>
-
-
-<h2>Catalog</h2>
-
-</p>Since we are new we are just testing these very uniques and interesting items! Please just take a couple minutes to vote on what items seem most appealing to you! This will make sure we have only the finest and best items availabe in our catalog. Thanks for your time! You will recieve a free 10$ dollar gift card!</p>
-
-
-
-<p>Please select the product you would most likley buy and love!</p>
-
-<section id="randomImage">
-</section>
-
-<div class="meter">
-  <span style="width: 50%"></span>
-</div>
-
-<script type="text/javascript" src="Vote_tracker.js"></script>
-
-</body>
-</html>
+  <html>
+  <head>
+    <title id="title">Bus-Mall</title>
+    <link rel="stylesheet" type=text/css href="Vote_tracker.css"
+    <link href="https://fonts.googleapis.com/css?family=Ranga" rel="stylesheet">
+    <head>
+      <body>
+        <header>
+          <h1>Bus Mall</h1>
+        </header>
+        <div>
+          <img id="busmall"src="images/busmall.jpeg"/>
+        </div>
+        <h2>Catalog</h2>
+        <p>Since we are new we are just testing these very uniques and interesting items! Please just take a couple minutes to vote on what items seem most appealing to you! This will make sure we have only the finest and best items availabe in our catalog. Thanks for your time! You will recieve a free 10$ dollar gift card!</p>
+        <p>Please select the product you would most likley buy and love!</p>
+        <section>
+          <section id="images-container"></section><hr>
+          <div id="myProgress">
+            <div id="myBar">1/15</div>
+          </section>
+          <button onclick="myReload()">Restart page</button>
+          <footer>
+            <p>Copyright &copy 2017 Bus Mall Inc. / All Rights Reserved.</p>
+          </footer>
+          <script type="text/javascript" src="Vote_tracker.js"></script>
+        </body>
+        </html>
