added chart to my page

--- a/Vote_tracker.html
+++ b/Vote_tracker.html
@@ -19,11 +19,13 @@
           <section id="images-container"></section><hr>
           <div id="myProgress">
             <div id="myBar">1/15</div>
+            <div id="chartContainer" style="height: 300px; width: 100%;"></div>
           </section>
           <button onclick="myReload()">Restart page</button>
           <footer>
             <p>Copyright &copy 2017 Bus Mall Inc. / All Rights Reserved.</p>
           </footer>
-          <script type="text/javascript" src="Vote_tracker.js"></script>
+          <script type= "text/javascript" src="Vote_tracker.js"></script>
+          <script type= "text/javascript" src="http://canvasjs.com/assets/script/canvasjs.min.js"></script>
         </body>
         </html>
