--- a/Vote_tracker.html
+++ b/Vote_tracker.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
   <html>
   <head>
-    <title id="title">Bus-Mall</title>
+    <title id="title">Bus|Mall</title>
     <link rel="stylesheet" type=text/css href="Vote_tracker.css"
     <link href="https://fonts.googleapis.com/css?family=Ranga" rel="stylesheet">
     <head>
@@ -16,16 +16,16 @@
         <p>Since we are new we are just testing these very uniques and interesting items! Please just take a couple minutes to vote on what items seem most appealing to you! This will make sure we have only the finest and best items availabe in our catalog. Thanks for your time! You will recieve a free 10$ dollar gift card!</p>
         <p>Please select the product you would most likley buy and love!</p>
         <section>
+          <hr>
           <section id="images-container"></section><hr>
-          <div id="myProgress">
-            <div id="myBar">1/15</div>
-            <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+           <table id="dataInfo"></table>
+            <div id="chartContainer" style="height: 500px; width: 100%;"></div>
           </section>
           <button onclick="myReload()">Restart page</button>
           <footer>
             <p>Copyright &copy 2017 Bus Mall Inc. / All Rights Reserved.</p>
           </footer>
           <script type= "text/javascript" src="Vote_tracker.js"></script>
-          <script type= "text/javascript" src="http://canvasjs.com/assets/script/canvasjs.min.js"></script>
+          <script type= "text/javascript" src="canvasjs.min.js"></script>
         </body>
         </html>
